@@ -29,6 +29,7 @@ PostGIS 2.0.1
   - #1839, handling of subdatasets in GeoTIFF in raster2pgsql.
   - #1840, fix logic of when to compute # of tiles in raster2pgsql.
   - #1851, fix spatial_ref_system parameters for EPSG:3844
+  - #1857, fix failure to detect endpoint mismatch in ST_AddEdge*Face* 
 
 * Enhancements *
 
